# child-lab-annotator

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: types.ts
src/lib/components/: CanvasOverlay.svelte  Controls.svelte  FragmentList.svelte  TabBar.svelte  Toolbar.svelte  VideoPlayer.svelte
src/lib/stores/: annotations.ts
src/lib/tasks/head-tracking/: CanvasOverlay.svelte  HeadTrackingTask.svelte  HeadTrackingToolbar.svelte  csv.ts  stores.ts  types.ts
src/lib/tasks/mutual-gaze/: GazeControls.svelte  GazeLegend.svelte  GazeTimeline.svelte  GazeToolbar.svelte  MutualGazeTask.svelte  csv.ts  types.ts
src/lib/tasks/smile/: EventList.svelte  Legend.svelte  SmileControls.svelte  SmileTask.svelte  SmileTimeline.svelte  SmileToolbar.svelte  csv.ts  types.ts
src/lib/utils/: csv.ts  debugLog.ts  geometry.ts  video.ts
