[package]
name = "child-lab-annotator"
version = "0.3.0"
edition = "2021"

[lib]
name = "child_lab_annotator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ffmpeg-sidecar = "2"
dirs = "6"
